close  modal for click in backdrop, add button up

--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -9,7 +9,7 @@
     </button>
     <b class="contact-modal__title section__title">Order</b>
 
-    <!-- добавить адапитв рисунка -->
+    <!--  адапитв рисунка -->
     <picture class="contact-modal__img">
       <source
         srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
@@ -38,25 +38,16 @@
               placeholder=" "
             />
             <span class="form-label">Name</span>
-            <!-- <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol-defs.svg#icon-close"></use>
-            </svg> -->
           </label>
 
           <label class="form-field">
             <input type="tel" class="form-input" name="tel" required placeholder=" " />
             <span class="form-label">Phone</span>
-            <!-- <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol-defs.svg#icon-close"></use>
-            </svg> -->
           </label>
 
           <label class="form-field">
             <input type="email" class="form-input" name="email" required placeholder=" " />
             <span class="form-label">E-mail</span>
-            <!-- <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol-defs.svg#icon-close"></use>
-            </svg> -->
           </label>
         </div>
 
@@ -70,15 +61,6 @@
             placeholder="Enter your text"
           ></textarea>
         </div>
-
-        <!-- <div class="policy">
-          <label class="policy-field"
-            ><input type="checkbox" class="checkbox" name="policy" required />
-            <span class="checkbox-icon"></span>
-            <span class="checkbox-label">Соглашаюсь с рассылкой и принимаю</span>
-            <a href="#" class="checkbox-link">Условия договора</a>
-          </label>
-        </div> -->
 
         <button type="submit" class="button button--white modal-buy__button">Send</button>
       </form>
