--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,24 +1,8 @@
-<!-- Header В шапке находится лого, меню навигации и кнопка. 
- На мобильной и планшетной версии меню навигации отображается,
-     как выезжающая боковая панель. 
- Мобильное меню фиксированное, высота соответствует высоте вьюпорта.
- Меню реализовано якорными ссылками, которые ведут на соответствующие
-     разделы макета. 
- Кнопка “Buy now” открывает модальное окно с формой заказа.
- Так как дизайна модального окна нет на макете, это является
-     не обязательным заданием. -->
-
-<!-- header -->
-<!-- хедер должен быть составной частью секции hero-header,
-в связи с этим у таблетной и десктопной версии ==background-color: transparent==
-для того чтобы было видно фоновое изображение от hero  -->
-
-<!-- <div class="hero"> -->
-
 <header class="header">
   <div class="container header__container">
     <!-- =========лого========== -->
-    <a class="logo" href="./">
+    <div class="backdrop header__backdrop visually-hidden"></div>
+    <a class="logo" href="./" rel="noreferrer noopener">
       <img
         class="logo__image"
         srcset="./images/Header/ice-cream/logo.png 1x, ./images/Header/ice-cream/logo@2x.png 2x"
@@ -33,6 +17,7 @@
       type="button"
       class="mobile-menu__switch mobile-menu__switch--open mobile-menu__open--js"
       aria-expanded="false"
+      aria-label="button for open mobile-menu"
     >
       <svg class="mobile-menu__svg" width="32" height="32" aria-label="mobile menu switch">
         <use class="mobile-menu__icon-burger" href="./images/symbol-defs.svg#icon-burger"></use>
@@ -41,7 +26,11 @@
     <!-- кнопка перключатель мобильного меню открытие end -->
 
     <!-- ===кнопка купить для хедера=== -->
-    <button type="button" class="button button--white header__button modal-buy--open ">
+    <button
+      type="button"
+      class="button button--white header__button modal-buy--open"
+      aria-label="button for opening modal window"
+    >
       <span class="button__buy">Buy now </span>
     </button>
     <!-- кнопка купить для хедера end -->
@@ -52,7 +41,7 @@
         <button
           type="button"
           class="mobile-menu__switch mobile-menu__switch--close mobile-menu__close--js"
-          data-modal-close
+          aria-label="button for closing mobile menu"
         >
           <svg class="mobile-menu__svg" width="34" height="34" aria-label="mobile menu switch">
             <use class="mobile-menu__icon-cross" href="./images/symbol-defs.svg#icon-close"></use>
@@ -61,7 +50,11 @@
         <!-- ===кнопка перключатель мобильного меню закрытие end -->
 
         <!-- кнопка мобильного меню buy-now -->
-        <button type="button" class="button button--white mobile-menu__button modal-buy-menu--open">
+        <button
+          type="button"
+          class="button button--white mobile-menu__button modal-buy-menu--open"
+          aria-label="button for opening modal window for order "
+        >
           <span class="button__buy">Buy now </span>
         </button>
         <!-- кнопка мобильного меню buy-now end-->
@@ -72,19 +65,23 @@
         <nav class="site-nav">
           <ul class="site-nav__list">
             <li class="site-nav__item">
-              <a href="./" class="site-nav__link">Home </a>
+              <a href="./" class="site-nav__link" rel="noreferrer noopener">Home </a>
             </li>
             <li class="site-nav__item">
-              <a href="#about-us" class="site-nav__link">About us </a>
+              <a href="#about-us" class="site-nav__link" rel="noreferrer noopener">About us </a>
             </li>
             <li class="site-nav__item">
-              <a href="#how-it-made" class="site-nav__link">How it’s made? </a>
+              <a href="#how-it-made" class="site-nav__link" rel="noreferrer noopener"
+                >How it’s made?
+              </a>
             </li>
             <li class="site-nav__item">
-              <a href="#our-products" class="site-nav__link">Our products </a>
+              <a href="#our-products" class="site-nav__link" rel="noreferrer noopener"
+                >Our products
+              </a>
             </li>
             <li class="site-nav__item">
-              <a href="#contact" class="site-nav__link">Contact </a>
+              <a href="#contact" class="site-nav__link" rel="noreferrer noopener">Contact </a>
             </li>
           </ul>
         </nav>
@@ -95,5 +92,3 @@
     <!-- ======================================= -->
   </div>
 </header>
-
-<!-- ====================== -->
