--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,6 +14,26 @@
   align-items: center;
 }
 
+.header__backdrop {
+  z-index: 90;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 93px 15px;
+  visibility: visible;
+  overflow-y: scroll;
+  &--hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+}
+
 .logo {
   display: inline-flex;
 }
@@ -33,10 +53,11 @@
 // мобильное меню
 
 .mobile-menu {
+  z-index: 9999;
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1;
+
   padding: 48px 15px;
 
   height: 100vh;
@@ -83,6 +104,9 @@
   visibility: visible;
 }
 
+body.menu--is-open {
+  overflow: hidden;
+}
 .mobile-menu__box {
   margin-left: auto;
   margin-right: auto;
@@ -209,7 +233,7 @@
 
 .site-nav__link {
   padding: 12px 0;
-transition: color 250ms linear;
+  transition: color 250ms linear;
   @include text(700, 14px, 1.3, 0, var(--main-bgc));
 
   &:active,
