--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -5,8 +5,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  // width: 100%;
-  // height: 100%;
   background-image: linear-gradient(to right, rgba(238, 174, 202, 0.8), rgba(178, 181, 184, 0.6));
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -53,24 +51,16 @@
     text-align: left;
 
     transform: translate(-50%, -50%) scale(1);
-    // max-width: 700px;
-    // min-height: 760px;
-    // width: 100%;
   }
 
   @media screen and (min-width: $desktop) {
     max-width: 1056px;
-    // min-height: 1128px;
   }
 }
 
 body.modal-about-menu--visible {
   overflow: hidden;
 }
-
-// .backdrop.visually-hidden .modal-about {
-//   transform: translate(-50%, -50%) scale(1.2);
-// }
 
 .modal-button__close {
   width: 40px;
@@ -168,8 +158,6 @@ body.modal-about-menu--visible {
   position: relative;
   flex-direction: column;
   width: 124px;
-  // &:not(:last-child) {
-  // }
 }
 
 .modal-box__num {
@@ -205,7 +193,6 @@ body.modal-about-menu--visible {
 
 .contact-modal__button:not(:last-child) {
   @media screen and (min-width: $tablet) {
-    // margin-right: 20px;
   }
 }
 
@@ -228,15 +215,17 @@ body.modal-about-menu--visible {
   }
 }
 
-// form здесь форма начинается
-
-// form здесь форма заканчивается
-
 // здесь начинается описание продукта
 
 .modal-about__write {
   margin-bottom: 20px;
-  width: 360px;
+
+  @media screen and (min-width: $tablet) {
+    width: 360px;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 720px;
+  }
 }
 
 .modal-about__label {
@@ -253,7 +242,6 @@ body.modal-about-menu--visible {
 }
 
 .modal-about__text {
-  // overflow: scroll;
   overflow-x: hidden;
 }
 
@@ -306,4 +294,70 @@ body.modal-about-menu--visible {
 
 .circle:nth-child(1) {
   transition-duration: 1000ms;
+}
+
+// кнопка невозврата
+
+.up-button__cover {
+  position: fixed;
+  right: 26px;
+  bottom: 26px;
+  z-index: 2;
+
+  padding: 16px;
+  border-radius: 50%;
+  border: solid 9px var(--mobile-menu-bgc);
+
+  @media screen and (max-width: $mobile-only) {
+    right: 25px;
+    bottom: 25px;
+    padding: 14px;
+  }
+}
+
+.up-button {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 2;
+
+  border-radius: 50%;
+  border: none;
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+
+  margin: 0;
+  padding: 0;
+  background-color: var(--hover-button-bgc);
+
+  animation: animate-up 2000ms infinite 2000ms;
+  box-shadow: inset 0 0 10px 5px var(--brand-color);
+
+  @media screen and (max-width: $mobile-only) {
+    width: 36px;
+    height: 36px;
+    background-color: var(--brand-color);
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(0.95);
+    background-color: var(--mobile-menu-bgc);
+    box-shadow: inset 0 0 10px 5px var(--brand-color);
+  }
+}
+
+@keyframes animate-up {
+  0% {
+    transform: rotate(-45deg);
+  }
+
+  50% {
+    transform: rotate(-135deg);
+  }
+
+  100% {
+    transform: rotate(-45deg);
+  }
 }
